--- a/public/sass/components/varaintCard.scss
+++ b/public/sass/components/varaintCard.scss
@@ -97,8 +97,7 @@
   color: #ff6600;
 }
 
-.articlePadding {
-}
+
 
 @media (max-width: 767px) {
   .articlePadding {
